--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "freelance",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
