--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
+    "glamor": "^2.20.40",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
