--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server/index.js",
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@sweetalert/with-react": "^0.1.1",
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
@@ -13,7 +15,8 @@
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
