--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
   "dependencies": {
     "@sweetalert/with-react": "^0.1.1",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "chalk": "^3.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "formidable": "^1.2.1",
     "glamor": "^2.20.40",
+    "massive": "^6.1.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "validator": "^12.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
