--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formidable": "^1.2.1",
     "glamor": "^2.20.40",
     "massive": "^6.1.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.12.0",
@@ -25,7 +26,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "sweetalert": "^2.1.2",
-    "validator": "^12.0.0"
+    "validator": "^12.0.0",
+    "xls-to-json-lc": "^0.3.4",
+    "xlsx-to-json-lc": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
