--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "chalk": "^3.0.0",
+    "convert-excel-to-json": "^1.6.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
