--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "sweetalert": "^2.1.2",
-    "validator": "^12.0.0",
-    "xls-to-json-lc": "^0.3.4",
-    "xlsx-to-json-lc": "^0.5.0"
+    "validator": "^12.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
