--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-feather": "^2.0.3",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "sweetalert": "^2.1.2",
     "validator": "^12.0.0"
   },
