--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "file-saver": "^2.0.2",
     "formidable": "^1.2.1",
     "glamor": "^2.20.40",
+    "html-pdf": "^2.2.0",
     "massive": "^6.1.1",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
