--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glamor": "^2.20.40",
     "html-pdf": "^2.2.0",
     "massive": "^6.1.1",
+    "moment": "^2.24.0",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
