--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
     "react-file-icon": "^0.2.0",
+    "react-icons": "^3.8.0",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
