--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "filesize": "^6.0.1",
     "formidable": "^1.2.1",
     "glamor": "^2.20.40",
-    "html-pdf": "2.2.0",
+    "html-pdf": "2.1.0",
     "massive": "^6.1.1",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "phantomjs-prebuilt": "2.1.13",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
