--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "react-transition-group": "^4.3.0",
     "sweetalert": "^2.1.2",
     "validator": "^12.0.0"
   },
