--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "phantomjs-prebuilt": "2.1.13",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown-select": "^3.8.1",
     "react-feather": "^2.0.3",
     "react-file-icon": "^0.2.0",
     "react-icons": "^3.8.0",
@@ -35,6 +36,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-transition-group": "^4.3.0",
+    "semantic-ui-react": "^0.88.2",
     "sweetalert": "^2.1.2",
     "validator": "^12.0.0"
   },
