--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formidable": "^1.2.1",
     "glamor": "^2.20.40",
     "html-pdf": "2.1.0",
+    "keycode": "^2.2.0",
     "massive": "^6.1.1",
     "memorystore": "^1.6.1",
     "moment": "^2.24.0",
