--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "massive": "^6.1.1",
     "memorystore": "^1.6.1",
     "moment": "^2.24.0",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "phantomjs-prebuilt": "2.1.13",
